gradle config for multi compilation 21< and 21